@@ -30,7 +30,7 @@ XML::Simple       = 2.18
 [Prereqs / ConfigureRequires]
 version           = 0.88
 Module::Build     = 0.4004
-Pod::Perldoc      = 3.14
+Pod::Perldoc      = 3.23
 
 [Prereqs / BuildRequires]
 version           = 0.88
